[Refactor/#655] API 모듈 정리 (#656)
* refactor: 모듈 1차 정리

* feat: web 모듈에 apache common 의존성 추가

* chore: 사용하지 않는 테스트 픽스처 삭제

* refactor: 모듈 2차 정리

* refactor: 모듈 3차 정리